feat: update openAPI spec
